--- a/.gitignore
+++ b/.gitignore
@@ -15,14 +15,14 @@ application/logs/*
 
 !application/*/.htaccess
 
-# composer.lock
+composer.lock
 tests/mocks/database/ci_test.sqlite
 
 user_guide_src/build/*
 user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
 user_guide_src/cilexer/pycilexer.egg-info/*
-# /vendor/
+/vendor/
 
 # IDE Files
 #-------------------------
